force-app/main/default/objects/ConsentUrlEncryption__c/ConsentUrlEncryption__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used in the creation of OptIn/Out URLs</description>
    <label>Consent URL Encryption</label>
</CustomObject>