force-app/main/default/objects/ConsentUrlEncryption__c/fields/Initialization_Vector__c.field-meta.xml
<CustomField>
    <fullName>Initialization_Vector__c</fullName>
    <label>Initialization Vector</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>