force-app/main/default/objects/ConsentUrlEncryption__c/fields/Opt_In_URL_Template__c.field-meta.xml
<CustomField>
    <fullName>Opt_In_URL_Template__c</fullName>
    <label>Opt In URL Template</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>