force-app/main/default/objects/ConsentUrlEncryption__c/fields/Private_Key__c.field-meta.xml
<CustomField>
    <fullName>Private_Key__c</fullName>
    <label>Private Key</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>